# gcp-cloud-data-security-consumer

./: README.md  pyproject.toml
scripts/: encrypt_data.py  generate_gpg_keys.py
scripts/data/: test_data.json
src/: main.py
src/core/: consumer.py
src/gcp/: bigquery.py  datacatalog.py  gcs.py  policy_tags.py  secret_manager.py
src/gcp/schema/: bigquery_schema.json  taxonomy_policy_tags.json
src/service/: gpg.py
src/utils/: helper.py
